--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ header{
   background-size: cover;
       background-position-y: -140px;
 }
-h1,h2,.skills-list{
+h1,h2{
   font-family: 'Inknut antiqua', serif;
   font-weight: normal;
 }
@@ -69,7 +69,7 @@ nav ul li a:hover{
     padding: 10px 30px;
     margin-top: 40px;
     border-radius: 20px;
-    transition: color 0.2s ease-in-out, background 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 .button:hover{
   background-color: black;
@@ -80,13 +80,25 @@ figcaption{
   margin-top: 10px;
 }
 .skills-list{
-  text-align: center;
-  margin: 150px;
-  font-size: 30px;
+  text-align: left;
+  margin-top: 70px;
+  margin-bottom: 100px;
+  font-size: 15px;
   line-height: 170%;
 }
-.dp-img{
+.skills-container{
+margin: 100px;
+}
+.skills-container img{
   max-width: 85%;
+}
+.skills-list h2{
+  font-size: 40px;
+}
+
+.dp-img img{
+  max-width: 85%;
+
 }
 .project{
   margin: 20px 0px;
